fix: mini-loader size and stale time in shifts

--- a/src/components/VerifyEmail/VerifyEmail.css
+++ b/src/components/VerifyEmail/VerifyEmail.css
@@ -1,10 +1,10 @@
-.login-cont form {
+.verify-email form {
   display: flex;
   flex-direction: column;
   gap: 1rem
 }
 
-.login-cont .submit-btn {
+.verify-email .submit-btn {
   margin-top: 2rem;
   background: #4361ee;
   color: white;
@@ -13,26 +13,26 @@
   transition: all ease 0.3s;
 }
 
-.login-cont .submit-btn:hover {
+.verify-email .submit-btn:hover {
   margin-top: 2rem;
   background: white;
   color: #4361ee;
   padding: 0.5rem 0;
 }
 
-.login-cont input {
+.verify-email input {
   margin-bottom: 0;
   padding: 0.25rem 0.5rem;
   border-radius: 4px;
   border: 1px solid grey;
 }
 
-.login-cont .mini-loader-cont {
+.verify-email .mini-loader-cont {
   width: 1.5rem;
   height: 1.5rem;
 }
 
-.login-cont .mini-loader-cont .loader {
+.verify-email .mini-loader-cont .loader {
   width: 100%;
   height: 100%;
 }
